modal forms logic and basic markup
- fix conflicts
- use iziToast
- fix modal sizes on all screens
- add rating modal markup and logic
- rework modals rendering

--- a/src/css/modal-exercise.css
+++ b/src/css/modal-exercise.css
@@ -15,12 +15,12 @@
   flex-direction: column;
   z-index: 2;
   background: #242424;
-  left: 20px;
-  right: 20px;
   top: 50%;
-  transform: translateY(-50%);
-  max-width: calc(100% - 40px);
-  min-width: 335px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 335px;
+  min-width: 285px;
+  width: calc(100% - 40px);
   padding: 40px 20px;
   border-radius: 20px;
 }
@@ -45,6 +45,7 @@
 .exercise-image {
   opacity: 0.8;
   border-radius: 12px;
+  width: 100%;
   max-width: 295px;
 }
 
@@ -71,7 +72,7 @@
 
 .rating {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   height: 18px;
   gap: 2px;
 }
