--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,4 +12,5 @@
 @import url('./header.css');
 @import url('./hero.css');
 @import url('./modal-exercise.css');
+@import url('./modal-rating.css');
 @import url('./favorites.css');
