--- a/src/partials/modal-exercise.html
+++ b/src/partials/modal-exercise.html
@@ -1,53 +1,1 @@
-<div class="modal-overlay hidden" id="exerciseModal">
-  <div class="modal-window">
-    <span class="close-button icon-x" id="closeButton"></span>
-    <div class="exercise-wrapper">
-      <img src="" alt="" class="exercise-image" loading="lazy" />
-      <div class="exercise-details">
-        <div class="exercise-header">
-          <h2></h2>
-          <div class="rating">
-            <span class="rating-value"></span>
-            <span class="icon-star"></span>
-            <span class="icon-star"></span>
-            <span class="icon-star"></span>
-            <span class="icon-star"></span>
-            <span class="icon-star"></span>
-          </div>
-        </div>
-        <ul class="exercise-info">
-          <li class="details-column">
-            <div class="details-title">Target</div>
-            <div class="details-value target-value-js"></div>
-          </li>
-          <li class="details-column">
-            <div class="details-title">Body Part</div>
-            <div class="details-value body-part-value-js"></div>
-          </li>
-          <li class="details-column">
-            <div class="details-title">Equipment</div>
-            <div class="details-value equipment-value-js"></div>
-          </li>
-          <li class="details-column">
-            <div class="details-title">Popular</div>
-            <div class="details-value popularity-value-js"></div>
-          </li>
-          <li class="details-column">
-            <div class="details-title">Burned Calories</div>
-            <div class="details-value calories-value-js"></div>
-          </li>
-        </ul>
-        <p class="exercise-description"></p>
-      </div>
-    </div>
-    <div class="modal-actions">
-      <button class="add-favorites-btn" id="addFavoritesButton">
-        Add to favorites<span class="icon-heart"></span>
-      </button>
-      <button class="remove-favorites-btn hidden" id="removeFavoritesButton">
-        Remove from favorites<span class="icon-trash"></span>
-      </button>
-      <button class="give-rating-btn" id="addRatingButton">Give a rating</button>
-    </div>
-  </div>
-</div>
+<div class="modal-overlay hidden" id="modalOverlay"></div>
