--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,8 +1,8 @@
 <header class="header">
   <div class="container">
     <div class="header-wrapper">
-      <a href="./index.html" class="header-logo">
-        <svg class="header-logo-icon" width="132" height="24">
+      <a href="./index.html">
+        <svg class="header-logo" width="132" height="24">
           <use href="/images/icons.svg#logo"></use>
         </svg>
       </a>
@@ -24,29 +24,7 @@
         </ul>
       </nav>
 
-      <ul class="social">
-        <li class="social-link">
-          <a href="https://www.facebook.com/goITclub/" class="social-media" target="_blank">
-            <svg class="social-icon" width="28" height="28">
-              <use href="/images/icons.svg#facebook"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="social-link">
-          <a href="https://www.instagram.com/goitclub/ " class="social-media" target="_blank">
-            <svg class="social-icon" width="28" height="28">
-              <use href="/images/icons.svg#instagram"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="social-link">
-          <a href="https://www.youtube.com/c/GoIT" class="social-media" target="_blank">
-            <svg class="social-icon" width="28" height="28">
-              <use href="/images/icons.svg#youtube"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
+      <load data-url="partials/social.html" />
     </div>
   </div>
 </header>
