--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -7,7 +7,7 @@
 }
 
 .footer .social-link {
-  transition: all 0.3s ease;
+  border: 1px solid rgba(244, 244, 244, 0.1);
 }
 
 .footer .social-icon {
