--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,32 +2,14 @@
   <section class="footer-container container">
     <div class="footer-left">
       <h2 class="footer-brand-name">
-        <a href="#">
-          <svg width="132" height="24" id="logo" class="footer-logo logo">
+        <a href="./index.html">
+          <svg width="132" height="24" class="footer-logo">
             <use href="/images/icons.svg#logo"></use>
           </svg>
         </a>
       </h2>
 
-      <div class="footer-social social">
-        <a class="social-link" href="#">
-          <svg class="social-icon" width="28" height="28" id="facebook">
-            <use href="/images/icons.svg#facebook"></use>
-          </svg>
-        </a>
-
-        <a class="social-link" href="#">
-          <svg class="social-icon" width="28" height="28">
-            <use href="/images/icons.svg#instagram"></use>
-          </svg>
-        </a>
-
-        <a class="social-link" href="#">
-          <svg class="social-icon" width="28" height="28">
-            <use href="/images/icons.svg#youtube"></use>
-          </svg>
-        </a>
-      </div>
+      <load data-url="partials/social.html" />
     </div>
 
     <div class="footer-right">
