--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,7 +13,7 @@
         aria-controls="mobile-menu"
         aria-label="Open menu"
       >
-        <svg class="burger-icon" width="32" height="32">
+        <svg class="menu-icon" width="32" height="32">
           <use href="./images/icons.svg#icon-burger"></use>
         </svg>
       </button>
