--- a/src/css/card_templates/exercises-card.css
+++ b/src/css/card_templates/exercises-card.css
@@ -30,7 +30,7 @@
 .exercises-header {
   width: 100%;
   justify-content: space-between;
-  margin-bottom: 25px;
+  margin-bottom: 24px;
   row-gap: 8px;
 }
 
@@ -126,6 +126,7 @@
   color: var(--primary-dark-color);
   font-size: 20px;
   line-height: 1;
+  padding-bottom: 1px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
