--- a/src/partials/daily-sport.html
+++ b/src/partials/daily-sport.html
@@ -15,8 +15,8 @@
   <picture class="photo quote-img-mobile">
     <source
       srcset="
-        ../assets/images/avif/quote-img-mob-2x.avif 2x,
-        ../assets/images/avif/quote-img-mob.avif    1x
+        /assets/images/avif/quote-img-mob-2x.avif 2x,
+        /assets/images/avif/quote-img-mob.avif    1x
       "
       type="image/avif"
     />
