--- a/src/partials/daily-sport.html
+++ b/src/partials/daily-sport.html
@@ -7,18 +7,19 @@
           Quote of the day
           <span class="icon-quotation quotation-mark"></span>
         </h3>
-        <p class="quote-text"></p>
-        <p class="quote-author"></p>
+        <p class="quote-text">Excellence is not a singular act but a habit. You are what you do repeatedly.</p>
+        <p class="quote-author">Shaquille O'Neal</p>
       </div>
     </div>
   </div>
   <picture class="photo quote-img-mobile">
     <source
       srcset="
-        ../assets/images/avif/quote-img-mob-2x.avif 2x,
-        ../assets/images/avif/quote-img-mob.avif    1x
+        /assets/images/avif/quote-img-mob-2x.avif 2x,
+        /assets/images/avif/quote-img-mob.avif    1x
       "
       type="image/avif"
+      alt="sport"
     />
     <source
       srcset="
@@ -26,6 +27,7 @@
         /assets/images/webp/quote-img-mob.webp    1x
       "
       type="image/webp"
+      alt="sport"
     />
     <source
       srcset="
@@ -33,8 +35,10 @@
         /assets/images/jpg/quote-img-mob.jpg    1x
       "
       type="image/img"
+      alt="sport"
     />
-    <img src="../assets/images/jpg/quote-img-mob.jpg " loading="lazy" class="quote-img" />
+    <img src="/assets/images/jpg/quote-img-mob.jpg " loading="lazy" class="quote-img" alt="sport"
+      width="335" height="242"/>
   </picture>
 
   <picture class="photo quote-img-tab">
@@ -44,6 +48,7 @@
         /assets/images/avif/quote-img-tab.avif    1x
       "
       type="image/avif"
+      alt="sport"
     />
     <source
       srcset="
@@ -51,6 +56,7 @@
         /assets/images/webp/quote-img-tab.webp    1x
       "
       type="image/webp"
+      alt="sport"
     />
     <source
       srcset="
@@ -58,8 +64,10 @@
         /assets/images/jpg/quote-img-tab.jpg    1x
       "
       type="image/img"
+      alt="sport"
     />
-    <img src="../assets/images/jpg/quote-img-tab.jpg " loading="lazy" class="quote-img" />
+    <img src="/assets/images/jpg/quote-img-tab.jpg " loading="lazy" class="quote-img" alt="sport"
+      width="288" height="258"/>
   </picture>
 
   <picture class="photo quote-img-desk">
@@ -69,6 +77,7 @@
         /assets/images/avif/quote-img.avif    1x
       "
       type="image/avif"
+      alt="sport"
     />
     <source
       srcset="
@@ -76,6 +85,7 @@
         /assets/images/webp/quote-img.webp    1x
       "
       type="image/webp"
+      alt="sport"
     />
     <source
       srcset="
@@ -83,8 +93,10 @@
         /assets/images/jpg/quote-img.jpg    1x
       "
       type="image/img"
+      alt="sport"
     />
-    <img src="../assets/images/jpg/quote-img.jpg " loading="lazy" class="quote-img" />
+    <img src="/assets/images/jpg/quote-img.jpg " loading="lazy" class="quote-img" alt="sport"
+      width="444" height="242"/>
   </picture>
 
   <picture class="photo quote-img-favorite">
@@ -94,6 +106,7 @@
         /assets/images/avif/quote-img-fav.avif    1x
       "
       type="image/avif"
+      alt="sport"
     />
     <source
       srcset="
@@ -101,6 +114,7 @@
         /assets/images/webp/quote-img-fav.webp    1x
       "
       type="image/webp"
+      alt="sport"
     />
     <source
       srcset="
@@ -108,8 +122,10 @@
         /assets/images/jpg/quote-img-fav.jpg    1x
       "
       type="image/img"
+      alt="sport"
     />
-    <img src="../assets/images/jpg/quote-img-fav.jpg " loading="lazy" class="quote-img" />
+    <img src="/assets/images/jpg/quote-img-fav.jpg " loading="lazy" class="quote-img" alt="sport"
+      width="335" height="119"/>
   </picture>
 
   <div class="daily-excercise">
