--- a/src/partials/exercises.html
+++ b/src/partials/exercises.html
@@ -1,6 +1,6 @@
 <section class="exersises">
   <p class="loader-text">
-    <span class="loader"> </span> Please wait. Data loading...
+    <span class="loader"> </span>
   </p>
   <div class="content"></div>
   <div class="pagination"></div>
