--- a/src/partials/daily-sport.html
+++ b/src/partials/daily-sport.html
@@ -14,24 +14,15 @@
   </div>
   <picture class="photo quote-img-mobile">
     <source
-      srcset="
-        /assets/images/avif/quote-img-mob-2x.avif 2x,
-        /assets/images/avif/quote-img-mob.avif    1x
-      "
+      srcset="/assets/images/avif/quote-img-mob-2x.avif 2x, /assets/images/avif/quote-img-mob.avif 1x"
       type="image/avif"
     />
     <source
-      srcset="
-        /assets/images/webp/quote-img-mob-2x.webp 2x,
-        /assets/images/webp/quote-img-mob.webp    1x
-      "
+      srcset="/assets/images/webp/quote-img-mob-2x.webp 2x, /assets/images/webp/quote-img-mob.webp 1x"
       type="image/webp"
     />
     <source
-      srcset="
-        /assets/images/jpg/quote-img-mob-2x.jpg 2x,
-        /assets/images/jpg/quote-img-mob.jpg    1x
-      "
+      srcset="/assets/images/jpg/quote-img-mob-2x.jpg 2x, /assets/images/jpg/quote-img-mob.jpg 1x"
       type="image/img"
     />
     <img src="../assets/images/jpg/quote-img-mob.jpg " loading="lazy" class="quote-img" />
@@ -39,24 +30,15 @@
 
   <picture class="photo quote-img-tab">
     <source
-      srcset="
-        /assets/images/avif/quote-img-tab-2x.avif 2x,
-        /assets/images/avif/quote-img-tab.avif    1x
-      "
+      srcset="/assets/images/avif/quote-img-tab-2x.avif 2x, /assets/images/avif/quote-img-tab.avif 1x"
       type="image/avif"
     />
     <source
-      srcset="
-        /assets/images/webp/quote-img-tab-2x.webp 2x,
-        /assets/images/webp/quote-img-tab.webp    1x
-      "
+      srcset="/assets/images/webp/quote-img-tab-2x.webp 2x, /assets/images/webp/quote-img-tab.webp 1x"
       type="image/webp"
     />
     <source
-      srcset="
-        /assets/images/jpg/quote-img-tab-2x.jpg 2x,
-        /assets/images/jpg/quote-img-tab.jpg    1x
-      "
+      srcset="/assets/images/jpg/quote-img-tab-2x.jpg 2x, /assets/images/jpg/quote-img-tab.jpg 1x"
       type="image/img"
     />
     <img src="../assets/images/jpg/quote-img-tab.jpg " loading="lazy" class="quote-img" />
@@ -64,49 +46,28 @@
 
   <picture class="photo quote-img-desk">
     <source
-      srcset="
-        /assets/images/avif/quote-img-2x.avif 2x,
-        /assets/images/avif/quote-img.avif    1x
-      "
+      srcset="/assets/images/avif/quote-img-2x.avif 2x, /assets/images/avif/quote-img.avif 1x"
       type="image/avif"
     />
     <source
-      srcset="
-        /assets/images/webp/quote-img-2x.webp 2x,
-        /assets/images/webp/quote-img.webp    1x
-      "
+      srcset="/assets/images/webp/quote-img-2x.webp 2x, /assets/images/webp/quote-img.webp 1x"
       type="image/webp"
     />
-    <source
-      srcset="
-        /assets/images/jpg/quote-img-2x.jpg 2x,
-        /assets/images/jpg/quote-img.jpg    1x
-      "
-      type="image/img"
-    />
+    <source srcset="/assets/images/jpg/quote-img-2x.jpg 2x, /assets/images/jpg/quote-img.jpg 1x" type="image/img" />
     <img src="../assets/images/jpg/quote-img.jpg " loading="lazy" class="quote-img" />
   </picture>
 
   <picture class="photo quote-img-favorite">
     <source
-      srcset="
-        /assets/images/avif/quote-img-fav-2x.avif 2x,
-        /assets/images/avif/quote-img-fav.avif    1x
-      "
+      srcset="/assets/images/avif/quote-img-fav-2x.avif 2x, /assets/images/avif/quote-img-fav.avif 1x"
       type="image/avif"
     />
     <source
-      srcset="
-        /assets/images/webp/quote-img-fav-2x.webp 2x,
-        /assets/images/webp/quote-img-fav.webp    1x
-      "
+      srcset="/assets/images/webp/quote-img-fav-2x.webp 2x, /assets/images/webp/quote-img-fav.webp 1x"
       type="image/webp"
     />
     <source
-      srcset="
-        /assets/images/jpg/quote-img-fav-2x.jpg 2x,
-        /assets/images/jpg/quote-img-fav.jpg    1x
-      "
+      srcset="/assets/images/jpg/quote-img-fav-2x.jpg 2x, /assets/images/jpg/quote-img-fav.jpg 1x"
       type="image/img"
     />
     <img src="../assets/images/jpg/quote-img-fav.jpg " loading="lazy" class="quote-img" />
@@ -118,13 +79,10 @@
       <h3 class="excercise-title">110 min</h3>
       <h3 class="excercise-sub">Daily norm of sports</h3>
       <p class="excercise-text">
-        The World Health Organization recommends at least 150 minutes of
-        moderate-intensity aerobic physical activity throughout the week for
-        adults aged 18-64. However, what happens if we adjust that number to 110
-        minutes every day? While it might seem like a high number to hit,
-        dedicating 110 minutes daily to sporting activities may offer
-        unparalleled benefits to physical health, mental well-being, and overall
-        quality of life.
+        The World Health Organization recommends at least 150 minutes of moderate-intensity aerobic physical activity
+        throughout the week for adults aged 18-64. However, what happens if we adjust that number to 110 minutes every
+        day? While it might seem like a high number to hit, dedicating 110 minutes daily to sporting activities may
+        offer unparalleled benefits to physical health, mental well-being, and overall quality of life.
       </p>
     </div>
   </div>
