--- a/src/partials/exercises.html
+++ b/src/partials/exercises.html
@@ -1,7 +1,5 @@
 <section class="exersises">
-  <p class="loader-text">
-    <span class="loader"> </span> Please wait. Data loading...
-  </p>
+  <p class="loader-text"><span class="loader"> </span> Please wait. Data loading...</p>
   <div class="content"></div>
   <div class="pagination"></div>
 </section>
