--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -44,9 +44,7 @@
     <div class="footer-copyright">
       <p class="footer-copyright-item">Your Energy. All rights reserved.</p>
 
-      <p class="footer-copyright-item">
-        <a href="#">Privacy Policy</a>&nbsp;/&nbsp;<a href="#">Terms of Service</a>
-      </p>
+      <p class="footer-copyright-item"><a href="#">Privacy Policy</a>&nbsp;/&nbsp;<a href="#">Terms of Service</a></p>
 
       <p class="footer-copyright-item">&copy;2023</p>
     </div>
