--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,66 +7,46 @@
         </svg>
       </a>
 
-      <button
-        class="menu-toggle js-open-menu"
-        aria-expanded="false"
-        aria-controls="mobile-menu"
-        aria-label="Open menu"
-      >
+      <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu" aria-label="Open menu">
         <svg class="burger-icon" width="32" height="32">
           <use href="/images/icons.svg#icon-burger"></use>
         </svg>
       </button>
 
-        <nav class="nav">
-          <ul class="toggle-container">
-            <li class="toggle-btn toggle-btn-home active">
-              <a href="./index.html" class="nav-link toggle-btn-home">Home</a>
-            </li>
-            <li class="toggle-btn toggle-btn-favorites">
-              <a href="./favorites.html" class="nav-link toggle-btn-favorites"
-                >Favorites</a
-              >
-            </li>
-          </ul>
-        </nav>
-
-        <ul class="social">
-          <li class="social-link">
-            <a
-              href="https://www.facebook.com/goITclub/"
-              class="social-media"
-              target="_blank"
-            >
-              <svg class="social-icon" width="28" height="28">
-                <use href="/images/icons.svg#facebook"></use>
-              </svg>
-            </a>
+      <nav class="nav">
+        <ul class="toggle-container">
+          <li class="toggle-btn toggle-btn-home active">
+            <a href="./index.html" class="nav-link toggle-btn-home">Home</a>
           </li>
-          <li class="social-link">
-            <a
-              href="https://www.instagram.com/goitclub/ "
-              class="social-media"
-              target="_blank"
-            >
-              <svg class="social-icon" width="28" height="28">
-                <use href="/images/icons.svg#instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-link">
-            <a
-              href="https://www.youtube.com/c/GoIT"
-              class="social-media"
-              target="_blank"
-            >
-              <svg class="social-icon" width="28" height="28">
-                <use href="/images/icons.svg#youtube"></use>
-              </svg>
-            </a>
+          <li class="toggle-btn toggle-btn-favorites">
+            <a href="./favorites.html" class="nav-link toggle-btn-favorites">Favorites</a>
           </li>
         </ul>
-      </div>
+      </nav>
+
+      <ul class="social">
+        <li class="social-link">
+          <a href="https://www.facebook.com/goITclub/" class="social-media" target="_blank">
+            <svg class="social-icon" width="28" height="28">
+              <use href="/images/icons.svg#facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-link">
+          <a href="https://www.instagram.com/goitclub/ " class="social-media" target="_blank">
+            <svg class="social-icon" width="28" height="28">
+              <use href="/images/icons.svg#instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-link">
+          <a href="https://www.youtube.com/c/GoIT" class="social-media" target="_blank">
+            <svg class="social-icon" width="28" height="28">
+              <use href="/images/icons.svg#youtube"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
     </div>
   </div>
 </header>
