--- a/src/partials/modal-exercise.html
+++ b/src/partials/modal-exercise.html
@@ -2,7 +2,7 @@
   <div class="modal-window">
     <span class="close-button icon-x" id="closeButton"></span>
     <div class="exercise-wrapper">
-      <img src="" alt="" class="exercise-image" loading="lazy">
+      <img src="" alt="" class="exercise-image" loading="lazy" />
       <div class="exercise-details">
         <div class="exercise-header">
           <h2></h2>
@@ -30,7 +30,7 @@
           </li>
           <li class="details-column">
             <div class="details-title">Popular</div>
-            <div class=" details-value popularity-value-js"></div>
+            <div class="details-value popularity-value-js"></div>
           </li>
           <li class="details-column">
             <div class="details-title">Burned Calories</div>
@@ -41,10 +41,12 @@
       </div>
     </div>
     <div class="modal-actions">
-      <button class="add-favorites-btn" id="addFavoritesButton">Add to favorites<span
-          class="icon-heart"></span></button>
-      <button class="remove-favorites-btn hidden" id="removeFavoritesButton">Remove from favorites<span
-          class="icon-trash"></span></button>
+      <button class="add-favorites-btn" id="addFavoritesButton">
+        Add to favorites<span class="icon-heart"></span>
+      </button>
+      <button class="remove-favorites-btn hidden" id="removeFavoritesButton">
+        Remove from favorites<span class="icon-trash"></span>
+      </button>
       <button class="give-rating-btn" id="addRatingButton">Give a rating</button>
     </div>
   </div>
