--- a/src/css/header.css
+++ b/src/css/header.css
@@ -76,7 +76,9 @@
   font-size: 16px;
   border-radius: 30px;
   cursor: pointer;
-  transition: background-color 0.3s, color 0.3s;
+  transition:
+    background-color 0.3s,
+    color 0.3s;
   gap: 10px;
   font-size: 16px;
   line-height: 1.5;
@@ -114,7 +116,9 @@
   width: 44px;
   height: 44px;
   border: 1px solid rgba(36, 36, 36, 0.1);
-  transition: background-color 0.4s, transform 0.2s;
+  transition:
+    background-color 0.4s,
+    transform 0.2s;
 }
 
 .social-icon {
