--- a/src/css/icons.css
+++ b/src/css/icons.css
@@ -1,4 +1,5 @@
-[class^="icon-"], [class*=" icon-"] {
+[class^='icon-'],
+[class*=' icon-'] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
   speak: never;
@@ -14,53 +15,53 @@
 }
 
 .icon-arrow-right:before {
-  content: "\e90f";
+  content: '\e90f';
 }
 .icon-search:before {
-  content: "\e90d";
+  content: '\e90d';
 }
 .icon-heart:before {
-  content: "\e904";
+  content: '\e904';
 }
 .icon-trash:before {
-  content: "\e90a";
+  content: '\e90a';
 }
 .icon-x:before {
-  content: "\e911";
+  content: '\e911';
 }
 .icon-double-chevron-left:before {
-  content: "\e900";
+  content: '\e900';
 }
 .icon-double-chevron-right:before {
-  content: "\e901";
+  content: '\e901';
 }
 .icon-chevron-left:before {
-  content: "\e902";
+  content: '\e902';
 }
 .icon-chevron-right:before {
-  content: "\e903";
+  content: '\e903';
 }
 .icon-arrow-up:before {
-  content: "\e905";
+  content: '\e905';
 }
 .icon-facebook:before {
-  content: "\e906";
+  content: '\e906';
 }
 .icon-instagram:before {
-  content: "\e907";
+  content: '\e907';
 }
 .icon-youtube:before {
-  content: "\e908";
+  content: '\e908';
 }
 .icon-weight:before {
-  content: "\e909";
+  content: '\e909';
 }
 .icon-quotation:before {
-  content: "\e90b";
+  content: '\e90b';
 }
 .icon-runner:before {
-  content: "\e90c";
+  content: '\e90c';
 }
 .icon-star:before {
-  content: "\e90e";
+  content: '\e90e';
 }
