--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,31 +7,21 @@
       Get <span class="title-italic">Body</span> in <br />shape, Stay healthy
     </h1>
     <p class="hero-text">
-      Transform your physique and embrace a healthier lifestyle with our
-      comprehensive fitness and nutrition support.
+      Transform your physique and embrace a healthier lifestyle with our comprehensive fitness and nutrition support.
     </p>
   </div>
   <div class="hero-tags-container">
     <picture class="hero-content-img">
       <source
-        srcset="
-          /assets/images/avif/small-preview.avif    1x,
-          /assets/images/avif/small-preview-2x.avif 2x
-        "
+        srcset="/assets/images/avif/small-preview.avif 1x, /assets/images/avif/small-preview-2x.avif 2x"
         type="image/avif"
       />
       <source
-        srcset="
-          /assets/images/webp/small-preview.webp    1x,
-          /assets/images/webp/small-preview-2x.webp 2x
-        "
+        srcset="/assets/images/webp/small-preview.webp 1x, /assets/images/webp/small-preview-2x.webp 2x"
         type="image/webp"
       />
       <source
-        srcset="
-          /assets/images/jpg/small-preview.jpg    1x,
-          /assets/images/jpg/small-preview-2x.jpg 2x
-        "
+        srcset="/assets/images/jpg/small-preview.jpg 1x, /assets/images/jpg/small-preview-2x.jpg 2x"
         type="image/img"
       />
       <img
