--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -8,12 +8,12 @@
   z-index: 999;
   background-color: rgb(var(--cl-primary-dark) / 40%);
   transition: opacity var(--tran-duration);
+}
 
-  &.hidden {
-    visibility: hidden;
-    opacity: 0;
-    pointer-events: none;
-  }
+.overlay.hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
 }
 
 .menu-container .menu-icon {
@@ -37,13 +37,13 @@
   background-color: var(--primary-dark-color);
   transform: translateX(100%);
   transition: transform 250ms ease-in-out, opacity 250ms ease-in-out;
-  opacity: 1;
-
+  opacity: 0;
   padding: 248px 0 20px;
 }
 
 .menu-container.is-open {
   transform: translateX(0);
+  opacity: 1;
 }
 
 .menu-container.is-closing {
