--- a/src/css/card_templates/category-card.css
+++ b/src/css/card_templates/category-card.css
@@ -1,5 +1,5 @@
 .category-wrap {
-  flex-basis: 100%;
+  width: 100%;
   height: 225px;
   position: relative;
   overflow: hidden;
@@ -52,7 +52,7 @@
 
 @media screen and (min-width: 768px) {
   .category-wrap {
-    flex-basis: calc((100% - 2 * 16px) / 3);
+    width: 224px;
     position: relative;
     overflow: hidden;
     border-radius: 12px;
@@ -61,7 +61,7 @@
 
 @media screen and (min-width: 1440px) {
   .category-wrap {
-    flex-basis: calc((100% - 2 * 16px) / 3);
+    width: 289px;
     height: 242px;
   }
 
