--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,7 +4,7 @@
       <h2 class="footer-brand-name">
         <a href="./index.html">
           <svg width="132" height="24" class="footer-logo">
-            <use href="/images/icons.svg#logo"></use>
+            <use href="./images/icons.svg#logo"></use>
           </svg>
         </a>
       </h2>
