--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,13 +3,13 @@
     <div class="header-wrapper">
       <a href="./index.html">
         <svg class="header-logo" width="132" height="24">
-          <use href="/images/icons.svg#logo"></use>
+          <use href="./images/icons.svg#logo"></use>
         </svg>
       </a>
 
       <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu" aria-label="Open menu">
         <svg class="burger-icon" width="32" height="32">
-          <use href="/images/icons.svg#icon-burger"></use>
+          <use href="./images/icons.svg#icon-burger"></use>
         </svg>
       </button>
 
