--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -2,7 +2,7 @@
   <div class="hero-text-container">
     <h1 class="hero-title">
       <svg class="hero-icon" width="59" height="59">
-        <use href="/images/icons.svg#icon-sun"></use>
+        <use href="./images/icons.svg#icon-sun"></use>
       </svg>
       Get <span class="title-italic">Body</span> in <br />shape, Stay healthy
     </h1>
