--- a/src/css/card_templates/exercises-card.css
+++ b/src/css/card_templates/exercises-card.css
@@ -213,8 +213,8 @@
 
 @media screen and (min-width: 768px) {
   .exercises-container {
-    max-width: calc((100% - 16px) / 2);
-    width: 100%;
+    max-width: 100%;
+    width: 344px;
   }
 
   .exercises-title {
@@ -236,8 +236,7 @@
 
 @media screen and (min-width: 1440px) {
   .exercises-container {
-    max-width: calc((100% - 16px) / 2);
-    width: 100%;
+    width: 442px;
   }
 
   .exercises-name {
