--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,9 +8,10 @@
       </a>
 
       <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu" aria-label="Open menu">
-        <svg class="burger-icon" width="32" height="32">
-          <use href="/images/icons.svg#icon-burger"></use>
-        </svg>
+        <span class="line"></span>
+        <span class="line"></span>
+        <span class="line"></span>
+        <span class="line"></span>
       </button>
 
       <nav class="nav">
