modal buttons transitions

--- a/src/css/modal-exercise.css
+++ b/src/css/modal-exercise.css
@@ -90,6 +90,9 @@
   font-size: 12px;
   line-height: 1.5;
   color: #f4f4f4;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s;
 }
 
 .exercise-info {
@@ -151,9 +154,12 @@
   gap: 8px;
   border-radius: 30px;
   padding: 12px 24px;
-  background: #f4f4f4;
+  background-color: #f4f4f4;
   font-size: 14px;
   border: none;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s;
 }
 
 .add-favorites-btn:hover,
@@ -178,6 +184,9 @@
   color: #f4f4f4;
   border-radius: 30px;
   padding: 12px 24px;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s;
 }
 
 .give-rating-btn:hover {
@@ -202,6 +211,16 @@
     font-size: 14px;
     top: 16px;
     right: 16px;
+    -webkit-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s;
+  }
+
+  .close-button:hover {
+    -webkit-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    transform: scale(1.2);
   }
 
   .exercise-wrapper {
@@ -269,5 +288,5 @@
 }
 
 .hidden {
-  display: none;
+  visibility: hidden;
 }
