--- a/src/css/modal-rating.css
+++ b/src/css/modal-rating.css
@@ -46,6 +46,9 @@
 
 .rating-header .icon-star {
   cursor: pointer;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s;
 }
 
 .rating-form {
@@ -101,6 +104,9 @@
   background: #f4f4f4;
   font-size: 14px;
   border: none;
+  -webkit-transition: .3s;
+  -o-transition: .3s;
+  transition: .3s;
 }
 
 .send-rating-btn {
