--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,3 +15,4 @@
 @import url('./modal-rating.css');
 @import url('./favorites.css');
 @import url('./mobile-menu.css');
+@import url('./scroll-to-top.css');
