page speed insights

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,7 @@
   <section class="footer-container container">
     <div class="footer-left">
       <h2 class="footer-brand-name">
-        <a href="./index.html">
+        <a href="./index.html" aria-label="logo">
           <svg width="132" height="24" class="footer-logo">
             <use href="./images/icons.svg#logo"></use>
           </svg>
