--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="container">
     <div class="header-wrapper">
-      <a href="./index.html">
+      <a href="./index.html" aria-label="logo">
         <svg class="header-logo" width="132" height="24">
           <use href="./images/icons.svg#logo"></use>
         </svg>
@@ -21,10 +21,10 @@
       <nav class="nav">
         <ul class="toggle-container">
           <li class="toggle-btn toggle-btn-home active">
-            <a href="./index.html" class="nav-link toggle-btn-home">Home</a>
+            <a href="./index.html" class="nav-link toggle-btn-home" aria-label="home button">Home</a>
           </li>
           <li class="toggle-btn toggle-btn-favorites">
-            <a href="./favorites.html" class="nav-link toggle-btn-favorites">Favorites</a>
+            <a href="./favorites.html" class="nav-link toggle-btn-favorites" aria-label="favorites button">Favorites</a>
           </li>
         </ul>
       </nav>
