loader, favorites fix

--- a/src/partials/favorites.html
+++ b/src/partials/favorites.html
@@ -1,4 +1,7 @@
 <section class="exersises container">
+  <p class="loader-text">
+    <span class="loader"> </span>
+  </p>
   <div class="content"></div>
 
   <div class="pagination"></div>
