smooth menu opening and disable scroll

--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -36,19 +36,27 @@
   justify-content: space-between;
   background-color: var(--primary-dark-color);
   transform: translateX(100%);
-  transition: transform 250ms ease-in-out, opacity 250ms ease-in-out;
+  transition:
+    transform 250ms ease-in-out,
+    opacity 250ms ease-in-out;
   opacity: 0;
   padding: 248px 0 20px;
+  z-index: 1000;
+}
+
+.menu-container.is-opening {
+  opacity: 0;
+  transform: translateX(100%);
 }
 
 .menu-container.is-open {
-  transform: translateX(0);
   opacity: 1;
+  transform: translateX(0);
 }
 
 .menu-container.is-closing {
-  transform: translateX(100%);
   opacity: 0;
+  transform: translateX(100%);
 }
 
 .menu-container .menu-toggle {
@@ -61,7 +69,9 @@
   width: 16px;
   height: 16px;
   fill: var(--primary-light-color);
-  transition: transform 0.3s ease, fill 0.3s ease;
+  transition:
+    transform 0.3s ease,
+    fill 0.3s ease;
 }
 
 .menu-container .menu-icon:hover,
@@ -86,7 +96,9 @@
 }
 
 .menu-container .menu-nav-container:hover {
-  transition: background-color 0.4s, transform 0.2s;
+  transition:
+    background-color 0.4s,
+    transform 0.2s;
 }
 
 .menu-nav-link {
@@ -100,35 +112,4 @@
   .menu-container {
     display: none;
   }
-}
-
-.menu-container .social {
-  display: flex;
-  flex-direction: row;
-  gap: 12px;
-  justify-content: center;
-}
-
-.menu-container .social-link {
-  align-items: center;
-  position: relative;
-  width: 44px;
-  height: 44px;
-  border: 1px solid rgba(244, 244, 244, 0.1);
-  transition: background-color 0.4s, transform 0.2s;
-  border-radius: 10px;
-}
-
-.menu-container .social-icon {
-  fill: var(--primary-light-color);
-}
-
-.menu-container .social-link:hover {
-  transform: scale(1.05);
-  border: 1px solid rgba(24, 24, 24, 0.1);
-  background-color: var(--primary-light-color);
-}
-
-.menu-container .social-link:hover .social-icon {
-  fill: var(--primary-dark-color);
 }
