--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -6,10 +6,10 @@
 
     <ul class="menu-nav-container js-menu-link">
       <li class="menu-nav-item">
-        <a href="./index.html" class="menu-nav-link" aria-label="home button">Home</a>
+        <a href="./index.html" class="menu-nav-link">Home</a>
       </li>
       <li class="menu-nav-item">
-        <a href="./favorites.html" class="menu-nav-link" aria-label="favorites button">Favorites</a>
+        <a href="./favorites.html" class="menu-nav-link">Favorites</a>
       </li>
     </ul>
 
