--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,9 +1,7 @@
 <div class="overlay hidden js-mobile-overlay" id="overlay">
   <div class="menu-container js-menu-container" id="mobile-menu">
     <button class="menu-toggle js-close-menu" aria-label="Close menu">
-      <svg class="menu-icon" width="32" height="32">
-        <use href="./images/icons.svg#icon-cross"></use>
-      </svg>
+      <span class="icon-x"></span>
     </button>
 
     <ul class="menu-nav-container js-menu-link">
@@ -15,40 +13,6 @@
       </li>
     </ul>
 
-    <ul class="social">
-      <li class="social-link">
-        <a
-          href="https://www.facebook.com/goITclub/"
-          class="social-media"
-          target="_blank"
-        >
-          <svg class="social-icon" width="28" height="28">
-            <use href="./images/icons.svg#facebook"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="social-link">
-        <a
-          href="https://www.instagram.com/goitclub/ "
-          class="social-media"
-          target="_blank"
-        >
-          <svg class="social-icon" width="28" height="28">
-            <use href="./images/icons.svg#instagram"></use>
-          </svg>
-        </a>
-      </li>
-      <li class="social-link">
-        <a
-          href="https://www.youtube.com/c/GoIT"
-          class="social-media"
-          target="_blank"
-        >
-          <svg class="social-icon" width="28" height="28">
-            <use href="./images/icons.svg#youtube"></use>
-          </svg>
-        </a>
-      </li>
-    </ul>
+    <load data-url="partials/social.html" />
   </div>
 </div>
